--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
     <h1 id="titulo">Bruna Ferreira</h1>
 </header>
 <body>
+    <img src="rsz_brunaferreira.jpg" id="minha_foto">
+    <ol id="licoes_aprendidas">
+        <li>Conhecer o Unix, Shell e Bash</li>
+        <li>Usar o terminal</li>
+        <li>O que é Git e GitHub</li>
+        <li>Como usar o GitHub</li>
+        <li>Os fundamentos da Internet</li>
+        <li>Entendi melhor o que é Front-end e Back-end</li>
+        <li>Introdução a HTML e CSS</li>
+        <li>Criar um portifólio no GitHub Pages</li>
+        <li>Usar o VS Code</li>
+        <li>Trabalhar com maior efetividade no HTML e CSS</li>
+    </ol>
 </body>
 </html>
