--- a/index.html
+++ b/index.html
@@ -47,6 +47,30 @@
       <li>Node.JS</li>
     </ul>
 
+<!-- A página deve possuir uma tabela. -->
+    <table id="tabela">
+      <tr>
+        <th>Tags</th>
+        <th>Classes</th>
+        <th>ID´s</th>
+      </tr>
+      <tr>
+        <td>header</td>
+        <td>body</td>
+        <td>footer</td>
+      </tr>
+      <tr>
+        <td>artigo</td>
+        <td>lado-direito</td>
+        <td>lado-esquerdo</td>
+      </tr>
+      <tr>
+        <td>cabecalho</td>
+        <td>minha-foto</td>
+        <td>tabela</td>
+      </tr>
+    </table>
+
 <!-- A configuração desse link deve ser feita para abrir em uma nova aba do navegador -->
     <a href="http://adrenaline.com.br" target="_blank" rel="noopener noreferrer">Adrenaline</a>
     <section class="artigo">
