update article and external link

--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
             <li>Arquitetura de Computadores e Redes;</li>
             <li>Banco de dados;</li>
         </ul>
+        <table>
+            
+        </table>
         <section>
             <article>
                 <p>
-                    Ut odio elit, mollis a consectetur in, vehicula eu magna. Duis convallis velit ut leo convallis convallis. Nunc finibus, nulla at vehicula lacinia, lorem justo varius justo, sit amet rutrum tellus lacus nec felis. Proin luctus odio quam, eget vestibulum dolor pretium vitae. Etiam vulputate, dui eget hendrerit placerat, nulla massa vulputate eros, quis hendrerit ex justo eu lectus. Nullam sed convallis ligula, sed lacinia augue. Maecenas sit amet risus nisi. Aenean porta leo ut ante pulvinar, eu molestie enim posuere.
+                    Ut odio elit, mollis a consectetur in, vehicula eu magna. Duis convallis velit ut leo convallis convallis. Nunc finibus, nulla at vehicula lacinia, lorem justo varius justo, sit amet rutrum tellus lacus nec felis. Proin luctus odio quam, eget vestibulum dolor pretium vitae. Etiam vulputate, dui eget hendrerit placerat, nulla massa vulputate eros, quis hendrerit ex justo eu lectus.
                 </p>            
             </article>
             <aside>
@@ -47,7 +50,7 @@
                 </p>
             </aside>
         </section>
-        <a href="https://www.linkedin.com/in/giovani-diccini/">Linkedin</a>
+        <a href="https://www.linkedin.com/in/giovani-diccini/" target="_blank">Linkedin</a>
         <footer id="rodape"></footer>
     </body>
 </html>
