Atualizando requisitos 1 & 2 e consertando erros codeclimate

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header id="cabecalho">
-      <h1>Lições aprendidas</h1>
+      <h1 id="titulo">Lições aprendidas</h1>
       <h2>Lucas Neves - Turma 09</h2>
   </header>
 </body>
