--- a/index.html
+++ b/index.html
@@ -23,5 +23,17 @@
     <li>Como a internet funciona</li>
     <li>Inteligência Emocional</li>
   </ol>
+  <ul>
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>Git</li>
+    <li>GitHub</li>
+    <li>Estruturas de página HTML</li>
+    <li>Primeiros passos em CSS</li>
+    <li>CSS Seletores e posicionamento</li>
+    <li>HTML Semântico</li>
+    <li>Como a internet funciona</li>
+    <li>Inteligência Emocional</li>
+  </ul>
 </body>
 </html>
