--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
             <h1 id="titulo">Lessons Learned</h1>
         </header>
         <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
+        <nav>
+            <h3>Me segue nas redes sociais!</h3>
+            <p>
+                <a href="https://www.linkedin.com/in/ggaldino95/" target="_blank">LinkedIn</a>
+                <a href="https://github.com/GGaldino95" target="_blank">GitHub</a>
+            </p>
+        </nav>
         <section>
+            <h4>Lições Aprendidas:</h4>
             <ol id="licoes_aprendidas">
                 <li>Fundamentos do Desenvolvimento Web</li>
                 <li>Introdução - Unix & Shell</li>
@@ -25,6 +33,7 @@
             </ol>
         </section>
         <section>
+            <h4>Lições que desejo aprender ainda:</h4>
             <ul id="licoes_a_aprender">
                 <li>Javascript</li>
                 <li>React</li>
