Adicionando artigo e seção sobre meu aprendizado

--- a/index.html
+++ b/index.html
@@ -9,37 +9,66 @@
 
   <body>
     <header id="cabecalho">
-      <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+      <section>
+        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+      </section>
     </header>
     <main>
-      <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto" />
+      <section>
+        <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto" />
+        <a href="https://github.com/GabriellCastro">Meu Github 👈</a>
+      </section>
       <table>
-        <ol id="licoes_aprendidas">
-          <li>Unix</li>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>Empatia</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Slack</li>
-          <li>Zoom</li>
-          <li>Inspect</li>
-          <li>Semantic HTML</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-          <li>Javascript</li>
-          <li>DOM</li>
-          <li>Forms</li>
-          <li>CSS responsive</li>
-          <li>ES6</li>
-          <li>HOF</li>
-          <li>Unit Tests</li>
-          <li>React</li>
-          <li>Node</li>
-          <li>SQL</li>
-        </ul>
+        <section>
+          <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+          </ol>
+        </section>
+        <section>
+          <ul id="licoes_a_aprender">
+            <li>Javascript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+          </ul>
+        </section>
       </table>
     </main>
+    <article>
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting
+        industry. Lorem Ipsum has been the industry's standard dummy text ever
+        since the 1500s, when an unknown printer took a galley of type and
+        scrambled it to make a type specimen book.
+      </p>
+    </article>
+    <section>
+      <aside>
+        <p>
+          It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was
+          popularised in the 1960s with the release of Letraset sheets
+          containing Lorem Ipsum passages, and more recently with desktop
+          publishing software like Aldus PageMaker including versions of Lorem
+          Ipsum.
+        </p>
+      </aside>
+    </section>
     <footer id="rodape"></footer>
   </body>
 </html>
