--- a/index.html
+++ b/index.html
@@ -11,5 +11,18 @@
         <h1 id="titulo">Caio Queiroz</h1>
     </header>
     <img id="minha_foto" src="foto-caio.jpg" alt="Minha foto">
+    <h2>Lições Aprendidas</h2>
+    <ul id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+    </ul>
 </body>
 </html>
