--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     <li>Como a internet funciona</li>
     <li>Inteligência Emocional</li>
   </ul>
+  <footer id="rodape"></footer>
 </body>
 </html>
