Passo - 8 - Adicionado artigo sobre meu aprendizado

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             </ul>
         </section>
         <a href="https://www.linkedin.com/in/maximilian-kaden-a48bb0a1/" target="_blank">Clique aqui para saber mais</a>
+        <article>
+            <h2>O que aprendi na Trybe?</h2>
+            <p>Apesar de pouco tempo estudando na Trybe, já aprendi e relembrei bastantes assuntos.
+                <br><br>
+                O primeiro e segundo bloco tratou-se de assuntos que nunca tinha estudado na vida; respectivamente Unix, Bach e Sheel Script; e Git, GitHub e Internet.
+                <br><br>
+                No terceiro bloco revisei e aprende pequenos novos detalhes a respeito de HTML e CSS; mas a parte mais legal sem duvidas é o primeiro projeto que estou realizando.
+            </p>
+        </article>
         <footer id="rodape"></footer>
     </body>
 </html>
