--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css" />
+    <title>Ana Luiza Machado: Lições aprendidas na Trybe</title>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     </section>
 </nav>
 
-<main>  
+<main>
     <section>
         <ol id="licoes_aprendidas">
             <li>Unix & Bash</li>
@@ -57,7 +58,7 @@
         <p>Os dias de estudo começam com dinâmicas de "Esquenta" com o objetivo de desenvolvimento de soft skills. Depois disso estudo os conteúdos propostos para o dia e sigo para aula ao vivo, para então praticar resolvendo exercícios.</p>
         <p>Nos dias de projeto, realizo exercícios, projetos e desafios práticos.</p>
     </article>
-    
+
     <aside>
         <h3>O aprendizado já começou no processo seletivo</h3>
         <p>Participar do processo seletivo da <a href="https://www.betrybe.com/" target="_blank">Trybe</a> foi uma experiência única e de muito aprendizado desde o começo, uma vez que nunca havia tido contato com programação ou desenvolvimento web.</p>
