Entrega de requisito 12.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
         </article>
         <aside>
             <p>No inicio do curso somos apresentados aos termos hard skills (capacitações técnicas) e soft skills (habilidades comportamentais). Aprendemos que as habilidades comportamentais são tão importantes quanto as técnicas, e que é necessário um treinamento continuo para ambas.</p>
+            <table>
+                <h3>Exemplos de Hard/Soft Skills</h3>
+                <tr>
+                    <th>Hard Skills</th>
+                    <th>Soft Skills</th>
+                </tr>
+                <tr>
+                    <td>Logica de Programação</td>
+                    <td>Comunicação</td>
+                </tr>
+                <tr>
+                    <td>Metodologias Ágeis</td>
+                    <td>Inteligência Emcocional</td>
+                </tr>
+                <tr>
+                    <td>UX Design</td>
+                    <td>Colaboração</td>
+                </tr>
+            </table>
         </aside>
     </main>
     <footer id="rodape">
