--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     <li>Front-end</li>
     <li>Back-end</li>
   </ul>
+
+  <footer id="rodape">
+    Compilado por: <a href="https://www.linkedin.com/in/devsfelipesantiago/">Felipe Santiago</a>
+  </footer>
 </body>
 
 </html>
