--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="cabecalho">
-
-    </header>
+  <header id="cabecalho">
+    <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+  </header>
 </body>
 </html>
-
-<!-- 
-O elemento com o id cabecalho deve ser fixo no topo da página, com a propriedade top tendo 0px
-
-O título deve estar dentro da barra e possuir o ID "titulo", além de ser uma tag h1 -->
