adicionando requisito 14 - alterando familia de fontes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lessons learned</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
         <img id="minha_foto" src="face_500kb.jpg" alt="foto de Luis Carlos Goandete">
-        
+
         <nav>
             <ul>
                 <li><a href="#licoes">lições</a></li>
