--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <li>Como a internet funciona</li>
     <li>Inteligência Emocional</li>
   </ul>
-  <footer id="rodape"></footer>
+  <footer id="rodape"><a href="https://www.linkedin.com/in/daniel-fasanaro-9b0ba01bb/" target="_blank">linkedin</a></footer>
 </body>
 </html>
