Adicionando seçao 'aside'

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
       </p>
     </article>
 
+    <aside>
+      <h3>O estudante de programação hoje</h3>
+      <p>
+        Sou estudante de Análise e Desenvolvimento de Sistemas em uma faculdade tradicional e vejo como o ensino brasileiro está defasado e precisando de direcionamento pro mercado de trabalho assim como a Trybe faz.
+      </p>
+    </aside>
+
     <section>
       <h2>Licões aprendidas</h2>
       <ol id="licoes_aprendidas">
