--- a/index.html
+++ b/index.html
@@ -9,8 +9,43 @@
   <body>
     <header id="cabecalho">
       <h1 id="titulo"></h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#licoes_aprendidas">Lições</a></li>
+        </ul>
+      </nav>
     </header>
 
     <img id="minha_foto" src="./images/minha_foto.jpeg" alt="" />
+    <section id="listas">
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Softskills</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+      </ol>
+
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Test</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+      </ul>
+    </section>
   </body>
+
+  <footer id="rodape"></footer>
 </html>
