--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
         </header>
         <main>
             <img id="minha_foto" src="pamela.jpeg" alt="Foto de Pamela Anderson Sales">
+            <ol id="licoes aprendidas"><h2>Lições aprendidas:</h2>
+                <li>Fundamentos do Desenvolvimento Web</li>
+                <li>Unix & Shell</li>
+                <li>Bash</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Internet: Como ela funciona</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>HTML & CSS: Seletores e Posicionamento</li>
+                <li>HMLT Semantico</li>
+            </ol>
+            <ul id="licoes_a_aprender"><h2>Lições a aprender:</h2>
+                <li>JavaScript</li>
+                <li>CSS Responsivo</li>
+                <li>Jest</li>
+                <li>React</li>
+                <li>RTL</li>
+                <li>Metodologias Ageis</li>
+                <li>SQL</li>
+                <li>Normalização e Modelagem de Banco de Dados</li>
+                <li>MongoDB</li>
+                <li>NodeJS</li>
+            </ul>
         </main>
   </body>
 </html>
