--- a/index.html
+++ b/index.html
@@ -10,56 +10,62 @@
     </head>
     <body>
         <header id="cabecalho">
-            <h1 id="titulo">Primeiro Projeto &#x1F680;</h1>
-            <img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="200px">
+            <h1 id="titulo">Primeiro Projeto &#x1F680;</h1>            
             <nav id="headNav">
                 <table>
                     <tr>
-                        <td><a href="#titulo">Home</a></td>
-                        <td><a href="#footer">Reference</a></td>
+                        <td><a href="#main">Home</a></td>
+                        <td><a href="#rodape">Reference</a></td>
                         <td><a href="">Contact</a></td>
                     </tr>
                 </table>
             </nav>
         </header>
-        <main>
+        <main id="main">
             <article>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere a. Vestibulum eu dapibus felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium felis ac odio faucibus imperdiet. Nunc tristique, sem ac commodo imperdiet, purus orci maximus elit, ac lacinia arcu nisi in metus. Vivamus congue enim orci, vel tristique orci pharetra non.</p>
+                <p><img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="200px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere a. Vestibulum eu dapibus felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium felis ac odio faucibus imperdiet. Nunc tristique, sem ac commodo imperdiet, purus orci maximus elit, ac lacinia arcu nisi in metus. Vivamus congue enim orci, vel tristique orci pharetra non.</p>
             </article>
             <aside>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere.</p> 
             </aside>
-            <section>
-                <ol #licoes_aprendidas>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>Internet</li>
-                    <li>CSS</li>
-                    <li>VSCode</li>
-                    <li>HTML</li>
-                    <li>Economizar Dedos</li>
-                    <li>Softskills</li>
-                    <li>Hardskills</li>
-                    <li>Bash</li>
-                </ol>
-            </section>
-            <section>
-                <ul #licoes_a_aprender>
-                    <li>sao</li>
-                    <li>tantas</li>
-                    <li>coisas</li>
-                    <li>que</li>
-                    <li>fica</li>
-                    <li>dificil</li>
-                    <li>de</li>
-                    <li>decorar</li>
-                    <li>ou</li>
-                    <li>enumerar</li>
-                </ul>
-            </section>
-        </main>
-        <footer #rodape>
-            <a href="https://www.lipsum.com/" target="_blank">Gerador de Textos</a>
-        </footer>
+                <div id="sectionLearn">
+                    <section>
+                        <h2>Lições Aprendidas</h2>
+                        <ol #licoes_aprendidas>
+                            <li>Git</li>
+                            <li>GitHub</li>
+                            <li>Internet</li>
+                            <li>CSS</li>
+                            <li>VSCode</li>
+                            <li>HTML</li>
+                            <li>Economizar Dedos</li>
+                            <li>Softskills</li>
+                            <li>Hardskills</li>
+                            <li>Bash</li>
+                        </ol>
+                    </section>
+                    <section>
+                        <h2>Lições a Aprender</h2>
+                        <ul #licoes_a_aprender>
+                            <li>sao</li>
+                            <li>tantas</li>
+                            <li>coisas</li>
+                            <li>que</li>
+                            <li>fica</li>
+                            <li>dificil</li>
+                            <li>de</li>
+                            <li>decorar</li>
+                            <li>ou</li>
+                            <li>enumerar</li>
+                        </ul>
+                    </section>
+                </div>    
+        </main>       
     </body>
+    <footer id="rodape">
+        <p><a href="https://www.lipsum.com/" target="_blank">Gerador de Textos</a></p>
+        <p>&#x1F4EA;ehauehuae@heau.com</p>        
+        <p>&#x1F4F1;1215 16841 6841</p>
+        <p>Powered by: Rodrigo Camargo</p>        
+    </footer>
 </html>
