Requisito 8 - adicionado artigo

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
     <h1 id="titulo">
       Lições Aprendidas - Trybe :)
     </h1>
-    <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/66654653?s=460&u=c99615034de62600eda9617441035c26fe045751&v=4" alt="Foto do Marcus">
   </header>
+  <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/66654653?s=460&u=c99615034de62600eda9617441035c26fe045751&v=4" alt="Foto do Marcus">
   <main>
+    <article>
+      <h2>Um pouco da minha jornada</h2>
+      <p>
+        Deixarei aqui um breve resumo de como começou essa aventura na Trybe. Depois de muito desânimo com a minha vida profissional, resolvi finalmente partir para uma área que gosto muito, e para a minha alegria, pude iniciar meus estudos na área da programação aqui na Trybe, uma escola incrível, que além de capacitar técnicamente seus estudantes, os ajuda a desenvolver habilidades sócio comportamentais, e isso fez ficar ainda mais animado com o método de ensino que esles praticam. Acredito que devido ao processo seletivo da Trybe, eles conseguem pessoas incríveis para serem seus alunos, pessoas que estão sempre dispostas a ajudar uns aos outros, é demais :)
+      </p>
+    </article>
     <section>
       <ol id="licoes_aprendidas">
         <li>Unix & Bash</li>
@@ -41,7 +47,7 @@
       </ul>
     </section>
     <section>
-      <p>Link para acessar <a href="https://github.com/marcusWittho" target="_blank">meu GitHub</a> e acompanhar meu desenvolvimento durante o curso.</p>
+      <p>Link para acessar meu perfil no <a href="https://github.com/marcusWittho" target="_blank">GitHub</a> e acompanhar meu desenvolvimento durante o curso.</p>
     </section>
   </main>
   <footer id="rodape">
