--- a/index.html
+++ b/index.html
@@ -12,17 +12,29 @@
     </header>
     <img src="pablo.jpeg" alt="foto de uma pessoa" id="minha_foto">
 
-    <ul id="licoes-aprendidas">
+    <ol id="licoes_aprendidas">
         <li>HTML</li>
         <li>CSS</li>
         <li>GIT</li>
         <li>GitHub</li>
-        <li>Softskills Empatia</li>
-        <li>Softskills Entendendo as emocoes</li>
-        <li>Softskills Gerenciando as reacoes as emocoes</li>
-        <li>Softskills Gerenciar o tempo</li>
-        <li>Softskills Definir prioridades</li>
-        <li>Quem eh o Pharaooooo???</li>
+        <li>Softskills Empathy</li>
+        <li>Softskills Learning some emotions</li>
+        <li>Softskills Emotional Management</li>
+        <li>Softskills Time Management</li>
+        <li>Softskills Priority Definitions</li>
+        <li>Who is Pharaooooo!!</li>
+    </ol>
+    <ul id="licoes_aprendidas">
+        <li>Javascript</li>
+        <li>Frameworks</li>
+        <li>Computer Science</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Softskills Learning emotions</li>
+        <li>Softskills Emotional and Reaction Management</li>
+        <li>Softskills Time Management</li>
+        <li>Softskills Priority Definitions</li>
+        <li>Softskills Empathy</li>
     </ul>
 </body>
 </html>
