Arrumando as tag articles para passarem nos requisitos minimos

--- a/index.html
+++ b/index.html
@@ -16,73 +16,77 @@
 
     <div id="corpo">
         <main>
-            <article>
-                <section id="sec-foto">
-                    <figure>
-                        <a href="https://www.instagram.com/matheusmrtno/" target="_blank"><img id="minha_foto"
-                                src="minha_foto.jpeg" alt="Minha foto de perfil" /></a>
-                        <figcaption>Clique na foto para acessar meu instagram</figcaption>
-                    </figure>
-                </section>
+            <section id="sec-foto">
+                <figure>
+                    <a href="https://www.instagram.com/matheusmrtno/" target="_blank"><img id="minha_foto"
+                            src="minha_foto.jpeg" alt="Minha foto de perfil" /></a>
+                    <figcaption>Clique na foto para acessar meu instagram</figcaption>
+                </figure>
+            </section>
 
-                <section id="licoes">
-                    <div id="div-aprendidas">
-                        <ol id="licoes_aprendidas">
-                            <li>Unix</li>
-                            <li>Bash</li>
-                            <li>Git</li>
-                            <li>GitHub</li>
-                            <li>Internet</li>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>Semântica</li>
-                            <li>Acessibilidade</li>
-                            <li>Inspect</li>
-                        </ol>
-                    </div>
+            <section id="licoes">
+                <div id="div-aprendidas">
+                    <ol id="licoes_aprendidas">
+                        <li>Unix</li>
+                        <li>Bash</li>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                        <li>Internet</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Semântica</li>
+                        <li>Acessibilidade</li>
+                        <li>Inspect</li>
+                    </ol>
+                </div>
 
-                    <div id="div-aprender">
-                        <ul id="licoes_a_aprender">
-                            <li>JavaScript</li>
-                            <li>Responsividade</li>
-                            <li>Jest</li>
-                            <li>RTL</li>
-                            <li>Redux</li>
-                            <li>API</li>
-                            <li>SQL</li>
-                            <li>MongoDB</li>
-                            <li>NodeJS</li>
-                            <li>Rest</li>
-                        </ul>
-                    </div>
-                </section>
-
-            </article>
+                <div id="div-aprender">
+                    <ul id="licoes_a_aprender">
+                        <li>JavaScript</li>
+                        <li>Responsividade</li>
+                        <li>Jest</li>
+                        <li>RTL</li>
+                        <li>Redux</li>
+                        <li>API</li>
+                        <li>SQL</li>
+                        <li>MongoDB</li>
+                        <li>NodeJS</li>
+                        <li>Rest</li>
+                    </ul>
+                </div>
+            </section>
 
             <article>
-                A formação Trybe é 100% online e conta com aulas ao vivo, onde você interage com sua turma diariamente.
-
-                Você pode fazer toda sua formação de qualquer local, desde que tenha disponibilidade de segunda a sexta,
-                de 14h às 20h, horário de Brasília, e conquiste a aprovação no processo seletivo da Trybe.
-
-                Duração aproximada de 12 meses com carga horária de 1.500 horas.
-
-                Na Trybe você vai adquirir o conhecimento técnico e as soft skills necessárias para construir uma
-                carreira de sucesso em desenvolvimento web e conecte se com o mercado de trabalho.
+                <p>
+                    A formação Trybe é 100% online e conta com aulas ao vivo, onde você interage com sua turma
+                    diariamente.
+                </p>
+                <p>
+                    Você pode fazer toda sua formação de qualquer local, desde que tenha disponibilidade de segunda a
+                    sexta, de 14h às 20h, horário de Brasília, e conquiste a aprovação no processo seletivo da Trybe.
+                </p>
+                <p>
+                    Duração aproximada de 12 meses com carga horária de 1.500 horas.
+                </p>
+                <p>
+                    Na Trybe você vai adquirir o conhecimento técnico e as soft skills necessárias para construir uma
+                    carreira de sucesso em desenvolvimento web e conecte se com o mercado de trabalho.
+                </p>
             </article>
         </main>
         <aside>
-            Estudo desenvolvimento de software na Trybe, uma escola que estimula os alunos a trabalharem em equipe,
-            simulando situações reais de trabalho em um time de desenvolvimento.
-
-            Meus conhecimentos em física e matemática me proporcionaram habilidades que julgo importantes para
-            programação.
+            <p>
+                Estudo desenvolvimento de software na Trybe, uma escola que estimula os alunos a trabalharem em equipe,
+                simulando situações reais de trabalho em um time de desenvolvimento.
+            </p>
+            <p>
+                Meus conhecimentos em física e matemática me proporcionaram habilidades que julgo importantes para
+                programação.
+            </p>
         </aside>
     </div>
 
-    <footer id="rodape">
-
-    </footer>
+    <footer id="rodape"></footer>
 </body>
 
 </html>
