--- a/index.html
+++ b/index.html
@@ -12,34 +12,50 @@
     <header id="cabecalho">
         <h1 id="titulo">Gabriel Mendonça</h1>
     </header>
-    <main>
-        <img id="minha_foto" src="/Images/foto.jpg" alt="Foto de Gabriel">
-        <h3>Lições aprendidas</h3>
-        <ol id="licoes_aprendidas">
-            <li>Introdução Unix e Shell</li>
-            <li>BASH</li>
-            <li>Conceitos de internet</li>
-            <li>GIT</li>
-            <li>GITHUB</li>
-            <li>HTML - Introdução</li>
-            <li>HTML - Estrutura de página</li>
-            <li>CSS - Introdução</li>
-            <li>CSS - Seletores e Posicionamento</li>
-            <li>HTML - Semântico</li>
-        </ol>
-        <h3>Lições que ainda desejo aprender</h3>
-        <ul id="licoes_a_aprender">
-            <li>Javascript</li>
-            <li>React</li>
-            <li>HTML e CSS responsivos</li>
-            <li>Javascript ES6</li>
-            <li>Javascript assincrono</li>
-            <li>Testes automatizados com JEST</li>
-            <li>Metodologias ageis</li>
-            <li>Gerenciamento de estado com Redux</li>
-            <li>Context API</li>
-            <li>React Hooks</li>
+    <nav id="navigation">
+        <ul>
+            <li><a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
+                        src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
+            </li>
+            <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.dev.lop@gmail.com"><img
+                        src="https://img.shields.io/badge/gmail-D14836?&style=for-the-badge&logo=gmail&logoColor=white" /></a>
+            </li>
         </ul>
+    </nav>
+    <main>
+        <section id="perfil">
+            <img id="minha_foto" src="/Images/foto.jpg" alt="Foto de Gabriel">
+            <p>Lições aprendidas</p>
+            <section id="minhas-licoes">
+                <ol id="licoes_aprendidas">
+                    <li>Introdução Unix e Shell</li>
+                    <li>BASH</li>
+                    <li>Conceitos de internet</li>
+                    <li>GIT</li>
+                    <li>GITHUB</li>
+                    <li>HTML - Introdução</li>
+                    <li>HTML - Estrutura de página</li>
+                    <li>CSS - Introdução</li>
+                    <li>CSS - Seletores e Posicionamento</li>
+                    <li>HTML - Semântico</li>
+                </ol>
+                <p>Lições que ainda desejo aprender</p>
+                <ul id="licoes_a_aprender">
+                    <li>Javascript</li>
+                    <li>React</li>
+                    <li>HTML e CSS responsivos</li>
+                    <li>Javascript ES6</li>
+                    <li>Javascript assincrono</li>
+                    <li>Testes automatizados com JEST</li>
+                    <li>Metodologias ageis</li>
+                    <li>Gerenciamento de estado com Redux</li>
+                    <li>Context API</li>
+                    <li>React Hooks</li>
+            </section>
+
+            </ul>
+        </section>
+
         <article>
             <!--https://gabrielgarciamendonca.github.io/   |   Meu portfólio foi utilizado para buscar alguns textos acerca dos locais no qual eu estudei.-->
             <h2>Historico</h2>
@@ -63,22 +79,24 @@
                     sucesso em tecnologia e que se compromete
                     integralmente com seus estudantes, pois as pessoas só pagam quando conseguirem um bom trabalho.</p>
             </section>
-            <section>
-                <aside>
-                    <h3>Breve passagem...</h3>
-                    <p><strong>Quando?</strong> Foi na época que estava fazendo faculdade.</p>
-                    <p>Tive que desenvolver um wallet do 0, sem saber nem sequer o que era orientação a objetos e muito
-                        menos um banco de dados relacional. Mas corri muito, pesquisei, estudei e consegui.</p>
-                </aside>
-            </section>
-        </article>
-    </main>
-    <footer id="rodape">
 
-        <!-- https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin -->
-        <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
-                src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
-    </footer>
+        </article>
+        <section>
+            <aside>
+                <h3>Breve passagem...</h3>
+                <p><strong>Quando?</strong> Foi na época que estava fazendo faculdade.</p>
+                <p>Tive que desenvolver um wallet do 0, sem saber nem sequer o que era orientação a objetos e muito
+                    menos um banco de dados relacional. Mas corri muito, pesquisei, estudei e consegui.</p>
+            </aside>
+        </section>
+        <footer id="rodape">
+            <h2>Me procure aqui: </h2>
+            <!-- https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin -->
+            <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
+                    src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
+        </footer>
+    </main>
+
 </body>
 
 </html>
