Finishing Requisite #5 - GOGO Tryber

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li>Softskills Priority Definitions</li>
         <li>Who is Pharaooooo!!</li>
     </ol>
-    <ul id="licoes_aprendidas">
+    <ul id="licoes_a_aprende">
         <li>Javascript</li>
         <li>Frameworks</li>
         <li>Computer Science</li>
