--- a/index.html
+++ b/index.html
@@ -10,4 +10,16 @@
         <h1 id="titulo">Lições que aprendi </h1>
     </header>
     <img src="./images/pedro.jpg" alt="Foto do Pedro durante a noite" id="minha_foto">
+    <ol id="licoes_aprendidas">
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Unix e Bash</li>
+        <li>Html</li>
+        <li>CSS</li>
+        <li>Inteligência emocional</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Linkedin</li>
+        <li>Semantic HTML</li>        
+    </ol>
 </body>
