Feito o quinto requisito

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 id="titulo">Caio Queiroz</h1>
     </header>
     <img id="minha_foto" src="foto-caio.jpg" alt="Minha foto">
-    <h2>Lições Aprendidas</h2>
+    <h2>Lições Aprendidas:</h2>
     <ul id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
@@ -23,6 +23,19 @@
         <li>Zoom</li>
         <li>Inspect</li>
         <li>Semantic HTML</li>
+    </ul>
+    <h2>Lições que desejo aprender:</h2>
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Test</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
     </ul>
 </body>
 </html>
