Adicionei uma lista de interesses

--- a/index.html
+++ b/index.html
@@ -11,26 +11,35 @@
         <h1>Titulo</h1>
     </header>
     <main>
-        <img id="minha_foto" src="perfilWhatsapp.jpeg" alt="Foto de um menino sorrindo">
-        <ol>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Unix</li>
-            <li>Bash</li>
-            <li>Zoom</li>
-            <li>Slack</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Inspect</li>
-            <li>Forms</li>
-        </ol>
-        <article> <b>Artigo com a tag article aqui.</b> Vivamus a feugiat libero, sed tincidunt ex. Duis sed diam dolor. Sed in ligula ac neque feugiat maximus consectetur quis felis. Suspendisse potenti. Vestibulum nec erat vel urna vehicula ornare. Praesent at magna congue, convallis diam quis, rhoncus tellus. Proin ut erat pulvinar, imperdiet diam id, mattis felis. Cras et nisl tortor. Nunc ornare a neque ut lacinia. Nunc et congue diam. Fusce rhoncus neque at lectus accumsan nullam sodales.</article>
+        <img id="minha_foto" src="perfilWhatsapp.jpeg" alt="menino sorrindo">
+        <nav id="navegatio">
+            <ol type="1">
+                <h3>Lista de coisas aprendidas</h3>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Unix</li>
+                <li>Bash</li>
+                <li>Zoom</li>
+                <li>Slack</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Inspect</li>
+                <li>Forms</li>
+            </ol>
+            <ol type="1">
+                <h3>Lista de coisas para aprender</h3>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Node.js</li>
+                <li>Soft Skills</li>
+            </ol>
+        </nav>       
+        <article> ARTIGO COM A TAG ARTICLE AQUI. Vivamus a feugiat libero, sed tincidunt ex. Duis sed diam dolor. Sed in ligula ac neque feugiat maximus consectetur quis felis. Suspendisse potenti. Vestibulum nec erat vel urna vehicula ornare. Praesent at magna congue, convallis diam quis, rhoncus tellus. Proin ut erat pulvinar, imperdiet diam id, mattis felis. Cras et nisl tortor. Nunc ornare a neque ut lacinia. Nunc et congue diam. Fusce rhoncus neque at lectus accumsan nullam sodales.</article>
         <section id="section">
             <aside>
-                <b>Aqui é uma seção com a tag aside. (Contando sobre o meu aprendizado na trybe que deve ter entre 100 letras e 300 letras</b>
+                Aqui é uma seção com a tag aside. (Contando sobre o meu aprendizado na trybe que deve ter entre 100 letras e 300 letras
             </aside>
-        </section>
-       
+        </section>      
 
     </main>
     <footer id="rodape">
