--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+      <header id="cabecalho">
+          <h1 id="titulo">Lições aprendidas - TRYBE!</h1>
+      </header>
   </body>
 </html>
