identando o css e add a tebela do ex Stomatopoda

--- a/index.html
+++ b/index.html
@@ -75,6 +75,25 @@
         </p>
     </aside>
 
+    <table border="1">
+        <tr>
+            <th>Reino</th>
+            <th>Filo</th>
+            <th>Subfilo</th>
+            <th>Classe</th>
+            <th>Subclasse</th>
+            <th>Ordem</th>
+        </tr>
+        <tr>
+            <td>Animalia</td>
+            <td>Arthropoda</td>
+            <td>Crustacea</td>
+            <td>Malacostraca</td>
+            <td>Hoplocarida</td>
+            <td>Stomatopoda</td>
+        </tr>
+    </table>
+
     <footer id="rodape">
     </footer>
 
