atendendo aos requisitos 2

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <header><h1>Perycles F.</h1></header>
+  <header id="cabecalho">
+      <h1 id="titulo">Perycles F.</h1>
+  </header>
 </body>
 </html>
