Requisito 8 - Artigo sobre aprendizado

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
                 <li>Mais sobre soft skills</li>
             </ul>
         </section>
+        <section>
+            <header>
+                <h2>E o que estou achando?</h2>
+                <article>
+                    <p>Nem acredito no quanto evoluí nessas praticamente duas semanas. É estranho como tenho a sensação de que aprendi pouco, mas, parando para analisar realmente, aprendi demais! Nenhuma dessas coisas eu fazia antes e nem imaginava que saberia fazer.</p>
+                    <p>Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e eu sou mesmo kk). <strong>#VQV</strong></p>
+                </article>
+            </header>
+        </section>
         <footer id="rodape">
             <h3>Compilado por Raquel Picanço</h3>
             <nav>
