--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
                     <li>Se o CSS te deixar perdido, o <code>display: flex</code> está ai para te ajudar</li>
                     <li>Tá perdido? Não guarde as dúvidas para você!</li>
                 </ol>
+                <ul id="licoes_a_aprender">
+                    <li>soft-skills</li>
+                    <li>Linguagem de Programação</li>
+                    <li>VSCode Finger's Economy na University of Oliva</li>
+                    <li>Regressão espacial e derivados</li>
+                    <li>Back-end</li>
+                    <li>Android</li>
+                    <li>Conversar com o CEO da Google em um elevador dentro de 30 segundos</li>
+                    <li>Estruturar bem o layout com CSS na disciplina finger's economy</li>
+                    <li>Don't Give Up... Just... Do it!</li>
+                    <li>Aprender a aprender</li>
+                </ul>
             </section>
         </main>
     </body>
