Acrescentado as duas listas

--- a/index.html
+++ b/index.html
@@ -4,16 +4,51 @@
         <meta charset="UTF-8">
         <title>HTML</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-    <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
-    </header> 
-    <article>
-        <section>
-            <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
+</head>
+<body>
+<header id="cabecalho">
+    <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
+</header> 
+<article>
+    <section>
+        <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
+    </section>
+    <section>
+        <h2>Lista das lições já aprendidas</h2>
+        <ol id="licoes_aprendidas">
+            <li>Fundamentos do Desenvolvimento Web</li>
+            <li>Introdução Unix & Shell</li>
+            <li>Conhecimento sobre Unix & Bash</li>
+            <li>Conhecimento sobre a Internet</li>
+            <li>HTML & CSS</li>
+            <li>HTML Semântico</li>
+            <li>Git</li>
+            <li>Github</li>
+            <li>Empatia</li>
+            <li>Inspect</li>
+        </ol>
         </section>
+        <section>
+            <h3>Lista das lições que Desejo aprender</h3>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
 
-    </article>    
+                
+            </ul>
+        </section>
+</article>    
 </body>
-    </html> 
+</html> 
+5 - A página deve possuir uma lista de lições que ainda deseja aprender
+A lista não deve ser numerada e deve possuir o ID "licoes_a_aprender"
+
+A lista deve possuir 10 itens
