--- a/index.html
+++ b/index.html
@@ -59,13 +59,11 @@
                     <p>Estou apenas na terceira semana de estudos na Trybe, e ja estou fazendo o primeiro projeto, que é justamente essa página web. Durante essas semanas consegui entender o funcionamento do git/github, de forma pratica e clara e a utilizar o terminal. Vimos o básico de HTML e CSS, e ja posso contruir páginas sem problemas. Sei que ainda tem muito por vir, e a proxima lição será sobre Javascript. Mal posso esperar para me tornar um desenvolvedor Web Full Stack Jr e trabalhar para mundo 🗺️.</p>
                 </article>
 
-                <aside>
+                <aside id="passagem-aprendizado">
                     <h3>Aconteceu comigo</h3>
                     <p>Na Trybe, fazemos muitas atividades de sofl skills, uma delas foi o primeiro trabalho em equipe, em que eu e mais 6 colegas eleboramos uma apresentação sobre o funcionamento da internet. Foi muito interessante ver que existem diversas opiniões e pontos de vista.</p>
                 </aside>
             </section>
-
-            
 
             <p>Para conhecer meus trabalhos acesse o meu <a href="https://github.com/saulokirchmaier" target="_blank">Github</a>, e para saber um pouco mais sobre mim acesse o meu <a href="https://www.linkedin.com/in/saulokirchmaier/" target="_blank">LinkedIn</a></p>
         </main>
