--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </header>
   <img src="rodrigofarias.jpeg" alt="Foto de Rodrigo Farias" id="minha_foto">
   <main id="main">
+    <h2>Lições Aprendidas</h2>
     <ol id="licoes_aprendidas">
       <li>Unix</li>
       <li>Bash</li>
@@ -29,6 +30,7 @@
       <li>Colaboração</li>
       <li>Empatia</li>
     </ol>
+    <h2>Liçoes a aprender</h2>
     <ul id="licoes_a_aprender">
       <li>Javascript</li>
       <li>Sql</li>
@@ -41,6 +43,7 @@
       <li>Python</li>
       <li>Lógica de programação</li>
     </ul>
+    <article id="artigo_aprendizado">Sou estudante de Trybe desde 09 de Novembro de 2020 e em apenas 15 dias aprendi a utilizar o bash/shell do sistema unix e seus principais comandos, a versionar arquivos com o git e armazenar em repositórios remotos como o github. Aprendi também a estruturar, tonar acessível, dar sentido e estilizar páginas web utilizando as linguagens de marcação html e estilo css. Estou encantado como a Trybe vem me ajudando a organizar melhor meu tempo, a conhecer pessoas maravilhosas e ter mais empatia. Sim!! Tudo isso em apenas 15 dias!!</article>
   </main>
   <footer id="rodape">Rodapé</footer>
 </body>
