--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <div id="cabecalho">
         <h1 id="titulo">LESSONS LEARNED PROJECT</h1>
       </div>
+      <img id="minha_foto" src="fotolets.jpg">
     </body>
 </html>
