--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1 id="titulo">Lessons Learned on Trybe</h1>
     </header>
     <main>
+        <img id="minha_foto" src="rsz_meplayingbass.jpg" alt="One picture of me Igor playing bass.">
 
     </main>
 </body>
