Passo 9 - Adicionado 'Aside' sobre passagem do meu aprendizado

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 No terceiro bloco revisei e aprende pequenos novos detalhes a respeito de HTML e CSS; mas a parte mais legal sem duvidas é o primeiro projeto que estou realizando.
             </p>
         </article>
+        <aside>
+            <p>Estou concluindo o meu primeiro mês de estudo na Trybe, já estudei: Unix, Bash, Sheel Script, Git, Git Hub, Internet, HTML, CSS e HTML semático.</p>
+        </aside>
         <footer id="rodape"></footer>
     </body>
 </html>
