--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
-
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Sobre</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
     </header>
     <a>
         <img src="minha_foto.png" alt="Foto de Danrlley Rodrigues">
@@ -20,31 +26,32 @@
     <aside>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra ultrices enim et pretium. Nulla facilisi. Etiam sed pharetra elit.
     </aside>
-
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Terminal Linux</li>
-        <li>Internet</li>
-        <li>Git</li>
-        <li>Github</li>
-        <li>HTML5</li>
-        <li>CSS</li>
-        <li>HTML Semântico</li>
-        <li>Empatia</li>
-        <li>Inteligência Emocional</li>
-    </ol>
-    <ul>
-        <li>JavaScript</li>
-        <li>PHP</li>
-        <li>CSS Responsivo</li>
-        <li>React</li>
-        <li>SQL</li>
-        <li>Pensamento Crítico</li>
-        <li>Criatividade</li>
-        <li>Liderança</li>
-        <li>Comunicação</li>
-        <li>Colaboração</li>
-    </ul>
+    <section>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Terminal Linux</li>
+            <li>Internet</li>
+            <li>Git</li>
+            <li>Github</li>
+            <li>HTML5</li>
+            <li>CSS</li>
+            <li>HTML Semântico</li>
+            <li>Empatia</li>
+            <li>Inteligência Emocional</li>
+        </ol>
+        <ul>
+            <li>JavaScript</li>
+            <li>PHP</li>
+            <li>CSS Responsivo</li>
+            <li>React</li>
+            <li>SQL</li>
+            <li>Pensamento Crítico</li>
+            <li>Criatividade</li>
+            <li>Liderança</li>
+            <li>Comunicação</li>
+            <li>Colaboração</li>
+        </ul>
+    </section>
     <footer id="rodape">
         <a href="https://www.linkedin.com/in/danrlley-rodrigues/" target="_blank">
         LinkedIn
